# gis-services

./: CHANGELOG.md  README.md  environment.yml  make_csv.py  pyproject.toml  ruff.toml
.github/workflows/: changelog.yml  release-checklist-comment.yml  release.yml  static-analysis.yml
image_server/: INSTALL.md  arcgis_setup.sh  cloudformation.yml  config.cfg  environment.yml  make_service.py  server_setup.md
image_services/egis/: COH06_VV_DJF.json  COH12.json  SampleCOH12metadata.txt  create_configs.py  make_egis_services.py  print_service_metadata.py  publishing_GSSICB_to_EGIS.md  publishing_MDCS_to_EGIS.md  sample_metadata_AMP.txt  sample_metadata_COH12.txt  sharing_content.md
image_services/egis/config/: COH06_HH_DJF.json  COH06_HH_JJA.json  COH06_HH_MAM.json  COH06_HH_SON.json  COH06_VV_DJF.json  COH06_VV_JJA.json  COH06_VV_MAM.json  COH06_VV_SON.json  COH24_HH_DJF.json  COH24_HH_JJA.json  COH24_HH_MAM.json  COH24_HH_SON.json  COH24_VV_DJF.json  COH24_VV_JJA.json  COH24_VV_MAM.json  COH24_VV_SON.json
image_services/egis/docs/: publishing_GSSICB_to_EGIS.md  publishing_GSSICB_webmap.md  publishing_MDCS_to_EGIS.md  sharing_content.md  updating_webmaps.md
image_services/egis/metadata/: print_egis_metadata.py  print_service_metadata.py
image_services/glo-30-hand/: make_hand_service.py
image_services/glo_30_hand/: README.md  glo_30_hand.json  hand_metadata.py  make_hand_service.py  make_rgb_service.py
image_services/opera/: README.md  make_opera_database.py  make_opera_dataset.py  make_opera_md.py  make_opera_services.py  make_opera_services_test.py  update_opera_uris.py  update_opera_uris.sh  update_opera_urls.py  update_opera_urls.sh  vsis3_urls.txt
image_services/opera/config/: rtc_hh.json  rtc_hh_test.json  rtc_hh_test_svalbard.json  rtc_hv.json  rtc_vh.json  rtc_vh_urls.json  rtc_vv.json  rtc_vv_urls.json
image_services/opera/metadata/: create_metadata.py
image_services/opera/raster_function_templates/: Sentinel1_RTC_dB_Stretch.rft.xml
image_services/rtc_services/: etree_code.py  make_pdc_service.py  make_pdc_service.sh  make_pdc_service_wms.py  make_rgb_service.py  make_rtc_service.py  make_rtc_service.sh  make_rtc_service_wms.py  publish_wms_enabled.py  rtc_service_cleanup.sh
image_services/rtc_services/hkh/: hkh_pw.json  hkh_rgb.json  hkh_rtc_vh.json  hkh_rtc_vv.json  hkh_wm.json
image_services/rtc_services/nasa_disasters/: rgb.json  rtc_vh.json  rtc_vv.json  rtc_vv_multidim.json  wm.json
image_services/rtc_services/pdc/: pdc_rgb.json  pdc_rtc_vh.json  pdc_rtc_vv.json  pdc_wm.json
image_services/sample_data/: make_sample_service.py  ridgecrest_amplitude.json  ridgecrest_coherence_12day.json  ridgecrest_los_12day.json  ridgecrest_unwrapped_12day.json  ridgecrest_vertical_12day.json  ridgecrest_wrapped_12day.json  rtc_10m.json  rtc_30m.json  rtc_amplitude_scale.json  rtc_db_scale.json  rtc_optional_area.json  rtc_optional_dem.json  rtc_optional_inc.json  rtc_optional_ls.json  rtc_optional_rgb.json  rtc_optional_rtc_vh.json  rtc_optional_rtc_vv.json  rtc_power_scale.json  rtc_speckle_no.json  rtc_speckle_yes.json
image_services/updating-scripts/: time_slider_updates.py
image_services/updating_scripts/: time_slider_updates.py  time_slider_updates.sh
image_services/usda/: usda_rgb.json  usda_rtc_vv.json
(+68 files in other folders)
